--- a/webpage.html
+++ b/webpage.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>heyy, Its my first html page</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-    <h1>WELCOME TO MY WEB PAGE<br>  
-        My name is Harshita Bhardwaj<br>
-        My mother name is Manju Sharma<br>
-        My father name is Sunil Kumar Bhardwaj<br>
-    </h1>
-    <h2>CSE DS 1<br>
-    ADDRESS : Ghaziabad</h2>
-    <p>Thank You for visiting here.</p>
+    
 </body>
 </html>
