--- a/Assignment9.html
+++ b/Assignment9.html
@@ -18,6 +18,7 @@
         padding: 10px;
         font-size: larger;
         font-family: 'Times New Roman', Times, serif;
+        border: 4px solid palevioletred;
     }
     h2 { 
       text-align: center; 
@@ -55,6 +56,17 @@
       font-weight: bold; 
       color: #0576ef; 
     } 
+    .add-cart{
+      display: block;                  
+      width: 100%;                     
+      padding: 10px;                  
+      background: #0066cc;            
+      color: #fff; 
+      border: none; 
+      border-radius: 4px;             
+      cursor: pointer; 
+      font-size: 16px;
+    }
     @media (max-width: 1024px) { 
       .grid { 
         grid-template-columns: repeat(2, 1fr);
@@ -76,21 +88,24 @@
             <img src="https://www.aachho.com/cdn/shop/products/14_d1dc6190-bafc-4ef5-b032-254782583c94_1080x.jpg?v=1684510735" alt="dress1"> 
             <h3>URBANSTRI</h3> 
             <p>Floral print anarkali dress.<br>Light weight with premium quality.</p> 
-            <p class="price">₹499</p> 
+            <p class="price">₹799</p> 
+            <button class="add-cart">ADD TO CART</button>
         </div> 
  
         <div class="card"> 
             <img src="https://fabvilla.in/cdn/shop/products/image_ae848ed8-eaf8-4c8b-ac27-f9f60f1fb420.jpg?v=1677942528" alt="dress2"> 
             <h3>FABVILLA</h3> 
             <p>Light weight and comfortable.<br>Durable and stylish for daily use.</p> 
-            <p class="price">₹799</p> 
+            <p class="price">₹899</p> 
+            <button class="add-cart">ADD TO CART</button>
         </div> 
  
         <div class="card"> 
             <img src="https://m.media-amazon.com/images/I/71+uD7UoaIL._AC_UY1100_.jpg" alt="dress3"> 
             <h3>CLAURA</h3> 
             <p>Pink coloured anarkali dress.<br>Best for the party wear.</p> 
-            <p class="price">₹1,299</p> 
+            <p class="price">₹1,199</p> 
+            <button class="add-cart">ADD TO CART</button>
         </div> 
  
         <div class="card"> 
@@ -98,7 +113,11 @@
             <h3>SHANAYA</h3> 
             <p>Off-white anarkali suit.<br>Trendy design with premium quality.</p> 
             <p class="price">₹999</p> 
+            <button class="add-cart">ADD TO CART</button>
         </div> 
     </div> 
+    <center><footer>
+      <p>&copy; designed by Harshita</p>
+    </footer></center>
 </body> 
 </html> 
